# 3d_robot_client

./: CMakeLists.txt  package.xml
include/: MainWindow.h  PointCloudOpenGLWidget.h  qnode.hpp  roboItem.h  robotVizOpenGLWidget.h
include/ros_msg/: control_info.h  workspace_info.h
include/ros_service/: SaveTraj.h  SaveTrajRequest.h  SaveTrajResponse.h  SetCommand.h  SetCommandRequest.h  SetCommandResponse.h  SetSpace.h  SetSpaceRequest.h  SetSpaceResponse.h  SetTraj.h  SetTrajRequest.h  SetTrajResponse.h
resources/shader/: shader_axis.fs  shader_globalMapPoint.vs  shader_lidarStablePoint.vs
src/: MainWindow.cpp  PointCloudOpenGLWidget.cpp  main.cpp  qnode.cpp  roboItem.cpp  robotVizOpenGLWidget.cpp
ui/: MainWindow.ui
